keycloak/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak-route
  namespace: keycloak
spec:
  parentRefs:
      - name: edge-gw
        namespace: gw-system
        sectionName: https-wildcard
  hostnames:
  - "auth.home.rboiko.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: keycloak-auth-service # Created automatically by the Keycloak Operator
      port: 8080 # The operator exposes port 8080 for HTTP
